# RuleBasedGraph

./: CMakeLists.txt  Dockerfile  MMS One Ctests.docx  README.md  RuleBasedGraph.cpp  Utils.hpp  index.md  main.cpp  runDevContainer.bat  test.cpp
.devcontainer/: Dockerfile
Debug/: RuleBasedGraph.exe.recipe  RuleBasedGraph.ilk  RuleBasedGraph.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/RuleBasedGraph.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RuleBasedGraph.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Graph/: Common.hpp  Edge.cpp  Edge.hpp  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  Renderer.cpp  Renderer.hpp  SubGraph.cpp  SubGraph.hpp
Graph/Rules/: AddRule.cpp  AddRule.hpp  BaseRule.cpp  BaseRule.hpp  ChangeRule.cpp  ChangeRule.hpp  DeleteRule.cpp  DeleteRule.hpp  EdgeRule.cpp  EdgeRule.hpp  InsertRule.cpp  InsertRule.hpp  NewNodesRule.cpp  NewNodesRule.hpp  ReplaceRule.cpp  ReplaceRule.hpp  Rules.cpp  Rules.hpp  ShortcutRule.cpp  ShortcutRule.hpp
data/: graph_rules.txt  input.txt  input2.txt  mintagráf.txt  mms_graph.txt  mms_rules.txt  rules.txt  the_graph.txt  the_rule.txt
doc/: Doxyfile
doc/html/: _add_rule_8cpp.html  _add_rule_8cpp__incl.map  _add_rule_8cpp__incl.md5  _add_rule_8cpp_source.html  _add_rule_8hpp.html  _add_rule_8hpp__dep__incl.map  _add_rule_8hpp__dep__incl.md5  _add_rule_8hpp__incl.map  _add_rule_8hpp__incl.md5  _add_rule_8hpp_source.html  _base_rule_8cpp.html  _base_rule_8cpp__incl.map  _base_rule_8cpp__incl.md5  _base_rule_8cpp_source.html  _base_rule_8hpp.html  _base_rule_8hpp__incl.map  (+481 more)
(+95 files in other folders)
